# walmart-alert-api

./: README.md  main.py  pyproject.toml  walmart-exam.db
app/api/v1/: alert.py
app/api/v2/: alert.py
app/data_access/: alert.py
app/models/: alert.py  custom_exception.py
tests/: test_alerts.py  test_other.py
tests/data/: alert_data.py
tests/v1/: test_v1_alerts.py
tests/v2/: test_v2_alerts.py
walmart_alert_api/api/: alert.py
walmart_alert_api/data_access/: alert.py  client.py
walmart_alert_api/data_access/sql/: create_table_alert.sql
